# DatabaseController

./: CMakeLists.txt  README.md  kisiler.db  test.db
src/: DatabaseController.cpp  DatabaseController.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
